lab2 almost done

--- a/lab2/index.html
+++ b/lab2/index.html
@@ -3,8 +3,37 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h2>hi</h2>
+<table>
+    <tr>
+        <td rowspan="2" colspan="2" >Денисенко</td>
+        <td >В'ячеслав</td>
+        <td >Сергійович</td>
+
+    </tr
+    <tr>
+        <td>ІП-24</td>
+        <td>Лабораторна №2</td>
+
+
+    </tr>
+    <tr>
+        <td colspan="2">Варіант №7</td>
+        <td></td>
+        <td rowspan="2"></td>
+
+    </tr>
+    <tr>
+        <td></td>
+        <td></td>
+        <td></td>
+
+    </tr>
+</table>
+
+<div class="clock"></div>
+
 </body>
 </html>
