--- a/lab2/index.html
+++ b/lab2/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <title>Title</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="clock_transform.css">
+    <link rel="stylesheet" href="clock_position.css">
 </head>
 <body>
 <table>
@@ -33,7 +35,26 @@
     </tr>
 </table>
 
-<div class="clock"></div>
+    <div class="clocks">
+        <div class="container_p">
+            <div class="dot dot_top"></div>
+            <div class="horizontal line"></div>
+            <div class="vertical line"></div>
+            <div class="dot dot_left"></div>
+            <div class="dot dot_right"></div>
+            <div class="dot dot_bottom"></div>
+        </div>
+        <div class="container_t">
+            <div class="dot_t dot_top"></div>
+            <div class="horizontal_t line_t"></div>
+            <div class="vertical_t line_t"></div>
+            <div class="dot_t dot_left"></div>
+            <div class="dot_t dot_right"></div>
+            <div class="dot_t dot_bottom"></div>
+        </div>
+    </div>
+
+
 
 </body>
-</html>
+</html>gi
