--- a/lab2/index.html
+++ b/lab2/index.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
-    <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="clock_transform.css">
-    <link rel="stylesheet" href="clock_position.css">
+    <link rel="stylesheet" href="./styles/style.css">
+    <link rel="stylesheet" href="./styles/clock_transform.css">
+    <link rel="stylesheet" href="./styles/clock_position.css">
 </head>
 <body>
 <table>
@@ -14,7 +14,7 @@
         <td >В'ячеслав</td>
         <td >Сергійович</td>
 
-    </tr
+    </tr>
     <tr>
         <td>ІП-24</td>
         <td>Лабораторна №2</td>
@@ -57,4 +57,4 @@
 
 
 </body>
-</html>gi
+</html>
