--- a/lab2/index.html
+++ b/lab2/index.html
@@ -36,21 +36,27 @@
 </table>
 
     <div class="clocks">
-        <div class="container_p">
-            <div class="dot dot_top"></div>
-            <div class="horizontal line"></div>
-            <div class="vertical line"></div>
-            <div class="dot dot_left"></div>
-            <div class="dot dot_right"></div>
-            <div class="dot dot_bottom"></div>
+        <div class="label">
+            <p>position</p>
+            <div class="container_p">
+                <div class="dot dot_top"></div>
+                <div class="horizontal line"></div>
+                <div class="vertical line"></div>
+                <div class="dot dot_left"></div>
+                <div class="dot dot_right"></div>
+                <div class="dot dot_bottom"></div>
+            </div>
         </div>
-        <div class="container_t">
-            <div class="dot_t dot_top"></div>
-            <div class="horizontal_t line_t"></div>
-            <div class="vertical_t line_t"></div>
-            <div class="dot_t dot_left"></div>
-            <div class="dot_t dot_right"></div>
-            <div class="dot_t dot_bottom"></div>
+        <div class="label">
+            <p>transform</p>
+            <div class="container_t">
+                <div class="dot_t dot_top"></div>
+                <div class="horizontal_t line_t"></div>
+                <div class="vertical_t line_t"></div>
+                <div class="dot_t dot_left"></div>
+                <div class="dot_t dot_right"></div>
+                <div class="dot_t dot_bottom"></div>
+            </div>
         </div>
     </div>
 
