--- a/lab5/index.html
+++ b/lab5/index.html
@@ -11,13 +11,13 @@
     <div class="form">
         <label for="form">Filling form</label>
         <form action="index.html" method="post" id="form">
-            <input type="text" id="name" name="name" placeholder="Name" required >
-            <input type="number" id="variant" name="variant" placeholder="Variant" required min="1" max="99">
-            <input type="tel" name="phone" id="phone" placeholder="Phone" required>
-            <input type="text" name="faculty" id="faculty" placeholder="Faculty" required minlength="4" maxlength="4">
-            <input type="email" name="mail" id="mail" placeholder="Email" required>
+            <input type="text" id="name" name="name" placeholder="Name (Surname F.S.)"  pattern="[А-ЯІЇЄҐA-Z][а-яіїєґ'a-z]+\s[А-ЯІЇЄҐA-Z]\.[А-ЯІЇЄҐA-Z]\." required>
+            <input type="number" id="variant" name="variant" placeholder="Variant (21)"  min="1" max="99" required>
+            <input type="tel" name="phone" id="phone" placeholder="Phone (0987654321)" pattern="\d{10}" required>
+            <input type="text" name="faculty" id="faculty" placeholder="Faculty (ffff)" required minlength="4" maxlength="4">
+            <input type="email" name="mail" id="mail" placeholder="Email (first@mail.com)" required>
 
-            <button type="submit">Submit</button>
+            <button id="submit" type="submit">Submit</button>
         </form>
     </div>
 
@@ -75,6 +75,6 @@
         </table>
     </div>
 
-<script src="js/main.js"></script>
+    <script src="js/main.js"></script>
 </body>
 </html>
