--- a/lab5/index.html
+++ b/lab5/index.html
@@ -18,7 +18,7 @@
             <input type="email" name="mail" id="mail" placeholder="Email (first@mail.com)" required>
 
             <button id="submit" type="submit">Submit</button>
-        </form>
+        </form>gi
     </div>
 
     <div class="table">
